
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added

-
-
-

### Changed

-
-

### Deprecated

### Removed

### Fixed

### Security

## ClinicaDL 0.2.2

### Added

- New functionality `clinicadl random-search analysis` to obtain the histogram of the balanced accuracy
over a random search folder.
- New functionality `clinicadl train from_json` to train a model with parameters defined in a JSON file.
- New functionality `clinicadl resume` to resume a prematurely stopped training task.
- possibility to learn the grey matter intensities with the binary classification during training,
based on `t1-volume` outputs.

### Changed

- Previous `clinicadl random-search` is now `clinicadl random-search generate`

## ClinicaDL 0.2.1

### Added

- the `multi_cohort` flag in train allows to train on several CAPS at the same time.

### Changed

- `clinicadl train roi` now allows any ROI defined by a mask.
- Update README.md to avoid duplicates.
- JSON files are added for `clinicadl classify` and `clinicadl tsvtool getlabels|split|kfold`

### Removed

- Scripts and data related to MedIA publication.


## ClinicaDL 0.2.0

### Added

- New functionality `clinicadl interpret`  to generate saliency maps linked
  to pretrained models based on groups of individual images.
- New functionality `clinicadl random-search` to sample random networks from a
  predefined hyperparameter space.
- Slice subparsers for `autoencoder`/`cnn`/`multicnn` to be homogeneous with other
  parsers.
- roi parser has now `multicnn` option.	
- Add generic options to command line: `--verbose`, `--version` and
  `--logname`.

### Changed

- Behaviour of `clinicadl quality-check t1-volume`.
- Simplify `clinicadl tsvtools` behaviour when using getlabels, split and
  analysis.
- Update documentation.

### Fixed

- Fix broken file when running preprocessing in t1-extensive.

